# ferroptosis

./: .~lock.checking.csv#  .~lock.cleaner.csv#  .~lock.edges.csv#  .~lock.ferrdb.csv#  .~lock.ferrdb_edges.csv#  .~lock.reg_test.csv#  .~lock.test.csv#  .~lock.winrar.csv#  .~lock.wtf.csv#  README.md  all_col_core_df.csv  checking.csv  cleaner.csv  config.py  core_data_transform.py  core_dist.py  coredf.py  data_quality.py  edge_distance.py  edges.csv  explore.py  ferrdb.csv  ferrdbDF.py  ferrdb_edges.csv  ferrdb_pw.py  ferrdbparser.py  ferreg_pw.py  filename.pickle  flake.nix  gbm_demo.py  giga_nodes.csv  giga_query_res.csv  go_id.p  kegg_compound.py  kegg_gene_dict.pkl  kegg_id.p  main.py  nodes.csv  prs_from_kegg_go_wp.csv  pw_test.py  (+12 more)
apicalls/: __init__.py  api_calls.py  api_oop.py  base.py  bgee.py  go.py  hpa.py  kegg.py  mygene.py  omnipathres.txt  pubchem.py  reactome.py  uniprot.py  yo.json
arnmerge/: arn_merge.py  fer_arn_edges.py  intersection_analysis.py
database/: external_db.py  ide.db  merger.py  merger_disease.py  network_db_seed.sql  network_db_seed2.sql  network_db_seed3.sql  sqlite_db_api.py  sqlite_db_api2.py  sqlite_db_api3.py
datawrangling/: compile_edges_df.py  compile_nodes_df.py  compounds.py  disease_ferreg.py  edges_ferrdb.py  edges_from_omnipath.py  ferreg.py  layer2.py  make_sql_dbs.py  map_interacts.py  no_edge_nodes.py  prfnc.py  testing.py  transform_core.py  transform_ferrdb.py  transform_ferreg.py  wrangle_ferreg.py
frontend/: _index.html  backend.py  graph.db  index.html  omnipath2.db
outputs/: core_geneProducts.csv  ferrdb.db  (+24 more)
(+63 files in other folders)
