[project]
name = "ferroptosis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bence Hajdu",email = "hajdu.bence@phd.semmelweis.hu"}
]

readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "numpy (>=1.20)",
    "pandas (>=1.3)",
    "matplotlib (>=3.4)",
    "sqlite3 (>=1.7)"
]

[tool.poetry]
packages = [{include = "code_python"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
