[project]
name = "ferroptosis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bence Hajdu",email = "hajdu.bence@phd.semmelweis.hu"}
]

readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "numpy (>=1.20)",
    "pandas (>=1.3)",
    "matplotlib (>=3.4)",
    "ipython (>=9.10.0,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "parsers" },
    { include = "datawrangling" },
    { include = "apicalls" },
    { include = "database" },
]
[tool.poetry.dependencies]
networkx = {version = "^3.6.1", python = ">=3.14,<3.14.1 || >3.14.1,<4.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
